Update project phases and tasks for clarity

--- a/index.html
+++ b/index.html
@@ -147,24 +147,24 @@ h1 {
 
 <!-- Blocos principais -->
 <div class="top-level">
-    <div class="node toggle collapsed">1. Iniciação e Planejamento
+    <div class="node toggle collapsed">1. Iniciar e Planejar o Projeto
         <div class="children">
-            <div class="subnode toggle collapsed">1.1 Definição do Escopo Detalhado
+            <div class="subnode toggle collapsed">1.1 Definir o Escopo Detalhado
                 <div class="children">
-                    <div class="subnode toggle collapsed">1.1.1 Levantamento de Requisitos
+                    <div class="subnode toggle collapsed">1.1.1 Levantar Requisitos
                         <div class="children">
-                            <div class="subnode">1.1.1.1 Funcionais e Não Funcionais</div>
-                            <div class="subnode">1.1.1.2 Ferramentas e Tecnologias</div>
-                            <div class="subnode">1.1.1.3 Modelagem de Dados e Fluxos</div>
+                            <div class="subnode">1.1.1.1 Identificar Requisitos Funcionais e Não Funcionais</div>
+                            <div class="subnode">1.1.1.2 Selecionar Ferramentas e Tecnologias</div>
+                            <div class="subnode">1.1.1.3 Modelar Dados e Fluxos de Processos</div>
                         </div>
                     </div>
-                    <div class="subnode toggle collapsed">1.1.2 Plano de Projeto
+                    <div class="subnode toggle collapsed">1.1.2 Elaborar o Plano de Projeto
                         <div class="children">
-                            <div class="subnode">1.1.2.1 Cronograma Detalhado</div>
-                            <div class="subnode">1.1.2.2 Orçamento Detalhado</div>
-                            <div class="subnode">1.1.2.3 Plano de Recursos</div>
-                            <div class="subnode">1.1.2.4 Plano de Riscos</div>
-                            <div class="subnode">1.1.2.5 Plano de Qualidade</div>
+                            <div class="subnode">1.1.2.1 Criar o Cronograma Detalhado</div>
+                            <div class="subnode">1.1.2.2 Estimar o Orçamento Detalhado</div>
+                            <div class="subnode">1.1.2.3 Planejar os Recursos Humanos e Materiais</div>
+                            <div class="subnode">1.1.2.4 Planejar os Riscos do Projeto</div>
+                            <div class="subnode">1.1.2.5 Definir o Plano de Qualidade</div>
                         </div>
                     </div>
                 </div>
@@ -172,79 +172,80 @@ h1 {
         </div>
     </div>
 
-    <div class="node toggle collapsed">2. Desenvolvimento do Protótipo
+    <div class="node toggle collapsed">2. Desenvolver o Protótipo
         <div class="children">
-            <div class="subnode toggle collapsed">2.1 Módulo Entrada de Dados
+            <div class="subnode toggle collapsed">2.1 Implementar o Módulo de Entrada de Dados
                 <div class="children">
-                    <div class="subnode">2.1.1 Upload de Vídeos/Imagens</div>
-                    <div class="subnode">2.1.2 Entrada de Parâmetros</div>
+                    <div class="subnode">2.1.1 Implementar Upload de Vídeos e Imagens</div>
+                    <div class="subnode">2.1.2 Implementar Entrada Manual de Parâmetros</div>
                 </div>
             </div>
-            <div class="subnode toggle collapsed">2.2 Módulo Análise de Movimento
+            <div class="subnode toggle collapsed">2.2 Implementar o Módulo de Análise de Movimento
                 <div class="children">
-                    <div class="subnode">2.2.1 Algoritmos de Rastreamento</div>
-                    <div class="subnode">2.2.2 Cálculo Diferencial Automático</div>
+                    <div class="subnode">2.2.1 Desenvolver Algoritmos de Rastreamento</div>
+                    <div class="subnode">2.2.2 Implementar Cálculo Diferencial Automático</div>
                 </div>
             </div>
-            <div class="subnode toggle collapsed">2.3 Módulo Visualização
+            <div class="subnode toggle collapsed">2.3 Desenvolver o Módulo de Visualização
                 <div class="children">
-                    <div class="subnode">2.3.1 Geração de Gráficos</div>
-                    <div class="subnode">2.3.2 Sobreposição Vetorial</div>
-                    <div class="subnode">2.3.3 Interface do Usuário (UI/UX)</div>
+                    <div class="subnode">2.3.1 Gerar Gráficos Interativos</div>
+                    <div class="subnode">2.3.2 Sobrepor Vetores no Vídeo</div>
+                    <div class="subnode">2.3.3 Projetar Interface do Usuário (UI/UX)</div>
                 </div>
             </div>
-            <div class="subnode toggle collapsed">2.4 Módulo Relatórios
+            <div class="subnode toggle collapsed">2.4 Desenvolver o Módulo de Relatórios
                 <div class="children">
-                    <div class="subnode">2.4.1 Exportação CSV</div>
-                    <div class="subnode">2.4.2 Exportação PDF</div>
+                    <div class="subnode">2.4.1 Exportar Dados em CSV</div>
+                    <div class="subnode">2.4.2 Gerar Relatórios em PDF</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="node toggle collapsed">3. Testes e Validação
+    <div class="node toggle collapsed">3. Testar e Validar o Sistema
         <div class="children">
-            <div class="subnode toggle collapsed">3.1 Planejamento de Testes
+            <div class="subnode toggle collapsed">3.1 Planejar os Testes
                 <div class="children">
-                    <div class="subnode">3.1.1 Casos de Teste</div>
-                    <div class="subnode">3.1.2 Preparação de Dados</div>
+                    <div class="subnode">3.1.1 Elaborar Casos de Teste</div>
+                    <div class="subnode">3.1.2 Preparar Conjunto de Dados para Testes</div>
                 </div>
             </div>
-            <div class="subnode toggle collapsed">3.2 Execução de Testes
+            <div class="subnode toggle collapsed">3.2 Executar os Testes
                 <div class="children">
-                    <div class="subnode">3.2.1 Funcionalidade</div>
-                    <div class="subnode">3.2.2 Performance</div>
-                    <div class="subnode">3.2.3 Usabilidade</div>
-                    <div class="subnode">3.2.4 Compatibilidade</div>
+                    <div class="subnode">3.2.1 Testar Funcionalidades</div>
+                    <div class="subnode">3.2.2 Avaliar Performance</div>
+                    <div class="subnode">3.2.3 Verificar Usabilidade</div>
+                    <div class="subnode">3.2.4 Testar Compatibilidade entre Sistemas</div>
                 </div>
             </div>
-            <div class="subnode toggle collapsed">3.3 Análise de Erros
+            <div class="subnode toggle collapsed">3.3 Analisar e Corrigir Erros
                 <div class="children">
-                    <div class="subnode">3.3.1 Correção de Bugs</div>
-                    <div class="subnode">3.3.2 Otimização de Algoritmos</div>
+                    <div class="subnode">3.3.1 Corrigir Bugs Identificados</div>
+                    <div class="subnode">3.3.2 Otimizar Algoritmos de Cálculo</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="node toggle collapsed">4. Documentação e Encerramento
+    <div class="node toggle collapsed">4. Documentar e Encerrar o Projeto
         <div class="children">
-            <div class="subnode toggle collapsed">4.1 Documentação
+            <div class="subnode toggle collapsed">4.1 Produzir Documentação
                 <div class="children">
-                    <div class="subnode">4.1.1 Manual do Usuário</div>
-                    <div class="subnode">4.1.2 Documentação do Código</div>
-                    <div class="subnode">4.1.3 Artigo Científico</div>
+                    <div class="subnode">4.1.1 Elaborar Manual do Usuário</div>
+                    <div class="subnode">4.1.2 Documentar Código-Fonte</div>
+                    <div class="subnode">4.1.3 Redigir Artigo Científico</div>
                 </div>
             </div>
-            <div class="subnode toggle collapsed">4.2 Entrega do Projeto
+            <div class="subnode toggle collapsed">4.2 Entregar o Projeto
                 <div class="children">
-                    <div class="subnode">4.2.1 Repositório de Código</div>
-                    <div class="subnode">4.2.2 Versão Final</div>
+                    <div class="subnode">4.2.1 Publicar Repositório de Código</div>
+                    <div class="subnode">4.2.2 Disponibilizar Versão Final do Sistema</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <script>
 document.querySelectorAll('.toggle').forEach(node => {
